# fictional-funicular

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run-tests.sh
examples/: onnx_examples.cpp
include/: load_model_inference.h  routes.h
include/fictional_funicular/cache/: kvcache.h
include/fictional_funicular/http/: routes.h
include/fictional_funicular/inference/: model_inference.h
include/fictional_funicular/tokenizer/: tokenizer.h
shared/: globals.cpp
src/: load_model_inference.cpp  routes.cpp
src/app/: main.cpp
src/common/: globals.cpp
src/http/: routes.cpp
src/inference/: model_inference.cpp
src/tokenizer/: tokenizer.cpp
test/: CMakeLists.txt
test/test-src/: first.cpp
tests/: CMakeLists.txt
tests/unit/: inference_tests.cpp  routes_tests.cpp
